--- a/Base/app/src/main/AndroidManifest.xml
+++ b/Base/app/src/main/AndroidManifest.xml
@@ -16,8 +16,13 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity
+            android:name=".TouchBaseActivity"
+            android:label="@string/title_activity_touch_base" >
+        </activity>
     </application>
 
-    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION"/>
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
+    <uses-permission android:name="android.permission.SEND_SMS" />
 
 </manifest>
